[package]
name = "day01"
version = "0.1.0"
authors = ["Isaac Abreu Rodríguez"]
description = "Advent of code 2022 day 1 solution"
license = "GPLv3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["cargo"] }
